--- a/urr.html
+++ b/urr.html
@@ -35,14 +35,47 @@
 
 
 
-let userWords = prompt("Введите слова");
+// let userWords = prompt("Введите слова");
 
-document.write(shifr(userWords));
+// document.write(shifr(userWords));
 
-function isLowerCase(str) {
-	if(str ===str.toLowerCase()) return true;
-	else return false;
-}
+// function isLowerCase(str) {
+// 	if(str ===str.toLowerCase()) return true;
+// 	else return false;
+// }
+
+// function shifr(str) {
+// 	const alphavit = ["А","Б","В","Г","Д","Е","Ё","Ж","З","И","Й","К","Л","М","Н","О","П","Р","С","Т","У","Ф","Х","Ц","Ч","Ш","Щ","Ъ","Ы","Ь","Э","Ю","Я"] ; 
+// 	let result="";
+// 	let i;
+// 	let upperCase;
+// 	for(x of str){
+// 		//document.write(x + " ");
+// 		upperCase =isLowerCase(x);
+// 		x=x.toUpperCase();
+// 		i =alphavit.indexOf(x);
+// 		if(i<0) result += x;
+// 		else{
+            
+// 			if (i==alphavit.length - 1) i=0;
+// 			else i++;
+// 			result += upperCase ? alphavit[i].toLowerCase() : alphavit[i];
+
+// 		}
+// 	}
+// 	return result;
+// }
+
+
+
+// let userWords = prompt("Введите слова");
+
+// document.write(shifr(userWords));
+
+// function isLowerCase(str) {
+// 	if(str ===str.toLowerCase()) return true;
+// 	else return false;
+// }
 
 function shifr(str) {
 	const alphavit = ["А","Б","В","Г","Д","Е","Ё","Ж","З","И","Й","К","Л","М","Н","О","П","Р","С","Т","У","Ф","Х","Ц","Ч","Ш","Щ","Ъ","Ы","Ь","Э","Ю","Я"] ; 
@@ -58,17 +91,13 @@ function shifr(str) {
 		else{
             
 			if (i==alphavit.length - 1) i=0;
-			else i++;
+			else i--;
 			result += upperCase ? alphavit[i].toLowerCase() : alphavit[i];
 
 		}
 	}
 	return result;
 }
-
-
-
-
 
 
 
